Removed breaking all style in course title to prevent incorrect wodr wrapping

--- a/src/Frontend/src/components/course/Course/Course.less
+++ b/src/Frontend/src/components/course/Course/Course.less
@@ -29,7 +29,7 @@
 .title {
   margin-top: 0;
   margin-bottom: 16px;
-  word-break: break-all;
+  word-break: break-word;
 
   text-align: center;
 
